[package]
name = "oso-rust-quickstart"
version = "0.2.0"
authors = ["Leina McDermott <leina05@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = "0.4.6"
oso = "0.11.2"
oso-derive = "0.11.2"
