[package]
name = "oso-rust-quickstart"
version = "0.1.0"
authors = ["Oso Security <support@osohq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = "0.5.0-rc.1"
oso = "0.26.0"
oso-derive = "0.26.0"
tokio = "1.10.0"
